Fixed layout issues with the switchboard

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -553,14 +553,9 @@ body {
 .switchboard { @extend .list-group; }
 .switchboard > a {
   @extend .list-group-item;
-  height: 50px;
 
-  img {
-    float: right;
-    max-width: 50%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
+  figure {
+    @extend .pull-right, .box-icon;
   }
   span {
     display: block;
